[jwt-setting] reafactor jwt auth
