# docs/swagger.json
@@ -13,7 +13,7 @@
             "post": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "BearerAuth": []
                     }
                 ],
                 "description": "get info about crime analysis at some point",
@@ -76,7 +76,7 @@
             "post": {
                 "security": [
                     {
-                        "ApiKeyAuth": []
+                        "BearerAuth": []
                     }
                 ],
                 "description": "get user requests history",
@@ -157,9 +157,9 @@
         }
     },
     "securityDefinitions": {
-        "ApiKeyAuth": {
+        "BearerAuth": {
             "type": "apiKey",
-            "name": "CrimeJWT",
+            "name": "Authorization",
             "in": "header"
         }
     }
